--- a/ExpLibraryChatSdk/src/main/AndroidManifest.xml
+++ b/ExpLibraryChatSdk/src/main/AndroidManifest.xml
@@ -2,4 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.explibrarychatsdk">
 
+    <application
+        android:name=".ExpLibraryChatSdkApp"
+        android:allowBackup="true"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.ExpLibraryChatSdk">
+            <activity android:name=".LaunchActivity"></activity>
+    </application>
+
 </manifest>
