--- a/ExpLibraryChatSdk/src/main/AndroidManifest.xml
+++ b/ExpLibraryChatSdk/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
             <activity android:name=".LaunchActivity"></activity>
+            <activity android:name=".create_user.CreateUser"></activity>
     </application>
 
 </manifest>
