--- a/uikit/src/main/AndroidManifest.xml
+++ b/uikit/src/main/AndroidManifest.xml
@@ -6,13 +6,13 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:hardwareAccelerated="true"
@@ -20,13 +20,13 @@
         android:usesCleartextTraffic="true"
         tools:node="merge"
         tools:targetApi="m">
-        <activity android:name=".ui_components.messages.extensions.Collaborative.CometChatCollaborativeActivity"/>
-        <activity
-            android:name=".ui_components.messages.extensions.Reactions.CometChatReactionInfoActivity"/>
+        <activity android:name=".ui_components.messages.extensions.Collaborative.CometChatCollaborativeActivity" />
+        <activity android:name=".ui_components.messages.extensions.Reactions.CometChatReactionInfoActivity" />
         <activity android:name=".ui_components.messages.media_view.CometChatMediaViewActivity" />
         <activity android:name=".ui_components.messages.message_information.CometChatMessageInfoScreenActivity" />
-        <activity android:name=".ui_components.calls.call_manager.CometChatStartCallActivity"
-            android:launchMode="singleTask"/>
+        <activity
+            android:name=".ui_components.calls.call_manager.CometChatStartCallActivity"
+            android:launchMode="singleTask" />
         <activity
             android:name=".ui_components.messages.thread_message_list.CometChatThreadMessageListActivity"
             android:windowSoftInputMode="adjustResize" />
@@ -56,6 +56,7 @@
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="com.cometchat.pro.uikit"
             android:value="${file_provider}" />
@@ -94,27 +95,19 @@
             android:name=".ui_components.messages.message_list.CometChatMessageListActivity"
             android:parentActivityName=".ui_components.cometchat_ui.CometChatUI"
             android:screenOrientation="portrait" />
-        <provider
-            android:name="androidx.core.content.FileProvider"
-            android:authorities="${file_provider}.provider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_path" />
-        </provider>
 
-        <receiver android:name=".ui_components.calls.call_manager.ongoing_call.OngoingCallBroadcast"
+        <receiver
+            android:name=".ui_components.calls.call_manager.ongoing_call.OngoingCallBroadcast"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="restartService"/>
+                <action android:name="restartService" />
             </intent-filter>
         </receiver>
 
-        <service android:name=".ui_components.calls.call_manager.ongoing_call.OngoingCallService"
-            android:enabled="true"/>
-
+        <service
+            android:name=".ui_components.calls.call_manager.ongoing_call.OngoingCallService"
+            android:enabled="true" />
     </application>
 
 </manifest>
