--- a/ExpLibraryChatSdk/build.gradle
+++ b/ExpLibraryChatSdk/build.gradle
@@ -1,6 +1,8 @@
-plugins {
-    id 'com.android.library'
-}
+//plugins {
+//    id 'com.android.library'
+//}
+
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 29
@@ -40,9 +42,10 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation project(path: ':uikit')
+    api project(path: ':uikit')
 
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
+    implementation platform('com.google.firebase:firebase-bom:26.4.0')
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
