--- a/ExpLibraryChatSdk/src/main/AndroidManifest.xml
+++ b/ExpLibraryChatSdk/src/main/AndroidManifest.xml
@@ -9,6 +9,16 @@
         android:supportsRtl="true">
             <activity android:name=".LaunchActivity"></activity>
             <activity android:name=".create_user.CreateUser"></activity>
+
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="true"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <receiver android:name=".CallNotificationAction" />
     </application>
 
 </manifest>
