--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ android {
         }
         debug {
             shrinkResources false
-            minifyEnabled true
+            minifyEnabled false
+            debuggable true
             signingConfig signingConfigs.release
         }
     }
@@ -58,7 +59,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation project(path: ':ExpLibraryChatSdk')
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -66,5 +67,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
     implementation platform('com.google.firebase:firebase-bom:26.4.0')
     implementation 'com.google.firebase:firebase-analytics'
+
+    api project(path: ':ExpLibraryChatSdk')
+//    implementation project(path: ':uikit')
+    implementation 'com.cometchat:pro-android-chat-sdk:2.2.1'
 
 }
