fixed push notifications clearing and added themes as per SaiKrishna

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.nestedlibrarysdk">
+    package="com.example.arteria">
 
     <application
-        android:name=".App"
+        android:name="com.example.arteria.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NestedLibrarySDK">
+        android:theme="@style/Theme.Arteria">
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -22,13 +22,15 @@
                 android:resource="@xml/provider_path" />
         </provider>
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.arteria.MainActivity"
+            android:theme="@style/AppThemeNoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ChatLaunch"></activity>
     </application>
 
 </manifest>
