--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
                 android:resource="@xml/provider_path" />
         </provider>
 
-        <activity android:name="com.example.arteria.MainActivity"
-            android:theme="@style/AppThemeNoActionBar">
+        <activity android:name="com.example.arteria.MainActivity">
+<!--            android:theme="@style/AppThemeNoActionBar">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
