--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.arteria">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:name="com.example.arteria.App"
         android:allowBackup="true"
