--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Arteria">
+        android:theme="@style/Theme.Arteria"
+        tools:replace="android:theme">
 
         <provider
             android:name="androidx.core.content.FileProvider"
