--- a/uikit/src/main/AndroidManifest.xml
+++ b/uikit/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:usesCleartextTraffic="true"
         tools:node="merge"
         tools:targetApi="m">
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_api_key"/>
         <activity android:name=".ui_components.messages.extensions.Collaborative.CometChatCollaborativeActivity" />
         <activity android:name=".ui_components.messages.extensions.Reactions.CometChatReactionInfoActivity" />
         <activity android:name=".ui_components.messages.media_view.CometChatMediaViewActivity" />
