--- a/uikit/src/main/AndroidManifest.xml
+++ b/uikit/src/main/AndroidManifest.xml
@@ -43,16 +43,23 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:mimeType="image/*" />
+                <data android:mimeType="video/*"  />
+                <data android:mimeType="audio/*"  />
+
+                <data android:mimeType="application/pdf"  />
+                <data android:mimeType="application/msword"  />
+                <data android:mimeType="application/vnd.ms.excel"  />
+                <data android:mimeType="application/mspowerpoint"  />
+                <data android:mimeType="application/docs"  />
+                <data android:mimeType="application/vnd.openxmlformats-officedocument.wordprocessingml.document"  />
+                <data android:mimeType="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"  />
+                <data android:mimeType="application/zip"  />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
