--- a/uikit/src/main/AndroidManifest.xml
+++ b/uikit/src/main/AndroidManifest.xml
@@ -52,10 +52,12 @@
                 <data android:mimeType="audio/*"  />
 
                 <data android:mimeType="application/pdf"  />
+                <data android:mimeType="application/docs"  />
                 <data android:mimeType="application/msword"  />
                 <data android:mimeType="application/vnd.ms.excel"  />
                 <data android:mimeType="application/mspowerpoint"  />
-                <data android:mimeType="application/docs"  />
+                <data android:mimeType="application/vnd.ms-powerpoint"  />
+                <data android:mimeType="application/vnd.openxmlformats-officedocument.presentationml.presentation"  />
                 <data android:mimeType="application/vnd.openxmlformats-officedocument.wordprocessingml.document"  />
                 <data android:mimeType="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"  />
                 <data android:mimeType="application/zip"  />
