--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ allprojects {
         jcenter()
 
         maven {
-            url "https://dl.bintray.com/cometchat/pro"
+            url "https://dl.cloudsmith.io/public/cometchat/cometchat-pro-android/maven/"
         }
     }
 }
