--- a/ExpLibraryChatSdk/src/main/AndroidManifest.xml
+++ b/ExpLibraryChatSdk/src/main/AndroidManifest.xml
@@ -9,8 +9,16 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-            <activity android:name=".LaunchActivity"></activity>
+            <activity android:name=".LaunchActivity">
+
+            </activity>
             <activity android:name=".create_user.CreateUser"></activity>
+        <activity android:name=".WavelabsChatActivity" >
+            <intent-filter>
+                <action android:name="FCM_PLUGIN_ACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
         <service
             android:name=".MyFirebaseMessagingService"
@@ -20,6 +28,20 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/cc" />
+        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorPrimaryDarkuikit" />
+        <!-- [END fcm_default_icon] -->
+        <!-- [START fcm_default_channel] -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="channel1" />
         <receiver android:name=".CallNotificationAction" />
     </application>
 
