--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,14 +26,14 @@
         </provider>
 
         <activity android:name="com.example.arteria.MainActivity">
-<!--            android:theme="@style/AppThemeNoActionBar">-->
+            <!--            android:theme="@style/AppThemeNoActionBar">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChatLaunch"></activity>
+        <activity android:name=".ChatLaunch" />
     </application>
 
 </manifest>
