--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,6 @@ dependencies {
 
     api project(path: ':ExpLibraryChatSdk')
 //    implementation project(path: ':uikit')
-    implementation 'com.cometchat:pro-android-chat-sdk:2.3.1'
-
+    //implementation 'com.cometchat:pro-android-chat-sdk:2.3.1'
+    implementation 'com.cometchat:pro-android-chat-sdk:2.2.2-beta1'
 }
