--- a/ExpLibraryChatSdk/build.gradle
+++ b/ExpLibraryChatSdk/build.gradle
@@ -5,8 +5,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.2"
 
     dataBinding {
         enabled = true
@@ -14,7 +14,7 @@ android {
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -52,5 +52,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     //implementation 'com.cometchat:pro-android-chat-sdk:2.3.1'
-    implementation 'com.cometchat:pro-android-chat-sdk:2.2.2-beta1'
+    implementation 'com.cometchat:pro-android-chat-sdk:2.4.1'
 }
