--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ apply plugin:'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.3"
+    compileSdkVersion 30
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.example.arteria"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
@@ -71,6 +71,6 @@ dependencies {
     api project(path: ':ExpLibraryChatSdk')
 //    implementation project(path: ':uikit')
     //implementation 'com.cometchat:pro-android-chat-sdk:2.3.1'
-    implementation 'com.cometchat:pro-android-chat-sdk:2.2.2-beta1'
+    implementation 'com.cometchat:pro-android-chat-sdk:2.4.1'
 
 }
