--- a/ExpLibraryChatSdk/build.gradle
+++ b/ExpLibraryChatSdk/build.gradle
@@ -51,6 +51,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    //implementation 'com.cometchat:pro-android-chat-sdk:2.4.1'
-    compileOnly 'com.cometchat:pro-android-chat-sdk:3.0.9'
+    implementation 'com.cometchat:pro-android-chat-sdk:3.0.9'
 }
