--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,6 @@ dependencies {
     api project(path: ':ExpLibraryChatSdk')
 //    implementation project(path: ':uikit')
     // implementation 'com.cometchat:pro-android-chat-sdk:2.4.1'
-    compileOnly 'com.cometchat:pro-android-chat-sdk:3.0.9'
+    implementation 'com.cometchat:pro-android-chat-sdk:3.0.9'
 
 }
