delli issues fixed

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
 
         maven {
             url "https://dl.cloudsmith.io/public/cometchat/cometchat-pro-android/maven/"
